force-app/main/default/objects/Sculpsure_Treatment__c/fields/BMI__c.field-meta.xml
<CustomField>
    <fullName>BMI__c</fullName>
    <label>BMI</label>
    <type>TextArea</type>
</CustomField>