force-app/main/default/objects/Sculpsure_Treatment__c/fields/BMI_Height_in__c.field-meta.xml
<CustomField>
    <fullName>BMI_Height_in__c</fullName>
    <label>BMI Height (in)</label>
    <type>TextArea</type>
</CustomField>