force-app/main/default/objects/Sculpsure_Treatment__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sculpsure Treatments</relationshipLabel>
    <relationshipName>Sculpsure_Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>