force-app/main/default/objects/Sculpsure_Treatment__c/fields/End_Build_Zone__c.field-meta.xml
<CustomField>
    <fullName>End_Build_Zone__c</fullName>
    <label>End Build Zone</label>
    <type>TextArea</type>
</CustomField>