force-app/main/default/objects/Sculpsure_Treatment__c/fields/Energy_in_Build__c.field-meta.xml
<CustomField>
    <fullName>Energy_in_Build__c</fullName>
    <label>Energy in Build</label>
    <type>TextArea</type>
</CustomField>