force-app/main/default/objects/Sculpsure_Treatment__c/fields/Pre_Tx__c.field-meta.xml
<CustomField>
    <fullName>Pre_Tx__c</fullName>
    <label>Pre Tx</label>
    <type>TextArea</type>
</CustomField>