force-app/main/default/objects/Sculpsure_Treatment__c/fields/Pre_Tx_of_PAC_s_used__c.field-meta.xml
<CustomField>
    <fullName>Pre_Tx_of_PAC_s_used__c</fullName>
    <label>Pre Tx # of PAC&apos;s used</label>
    <type>TextArea</type>
</CustomField>