force-app/main/default/objects/Sculpsure_Treatment__c/fields/Pre_Tx_Photos_taken__c.field-meta.xml
<CustomField>
    <fullName>Pre_Tx_Photos_taken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre Tx Photos taken</label>
    <type>Checkbox</type>
</CustomField>